--- a/src/input.css
+++ b/src/input.css
@@ -163,6 +163,38 @@
   .important {
     @apply -ml-4;
   }
+  
+  .related-posts {
+    @apply mt-12 pt-8 border-t border-dotted border-node-border;
+  }
+  
+  .related-posts h3 {
+    @apply mb-4 text-white;
+  }
+  
+  .related-posts ul {
+    @apply p-0;
+  }
+  
+  .related-posts li {
+    @apply my-3;
+  }
+  
+  .related-posts a {
+    @apply text-node-text;
+  }
+  
+  .related-posts a:hover {
+    @apply text-white;
+  }
+  
+  .related-posts .date {
+    @apply text-gray-500 text-sm ml-2;
+  }
+  
+  .reading-time {
+    @apply text-gray-500 ml-2;
+  }
 }
 
 @layer utilities {
